--- a/src/css/input.css
+++ b/src/css/input.css
@@ -55,16 +55,18 @@ p {
   box-sizing: border-box;
 }
 
-
+div.activities div.title {
+    margin-bottom: 40px;
+}
 
 div.gallery {
-  height: 630px;
+  height: 700px;
   background-color: aqua;
 }
 
 div.gallery-cell {
   width: 715px !important;
-  height: 630px !important;
+  height: 700px !important;
   display: flex !important;
   flex-direction: column;
   align-items: center;
@@ -76,12 +78,14 @@ div.gallery-cell .carrouseltext {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   width: 100%;
+
+  margin-bottom: 16px;
 }
 
 div.gallery-cell img {
   max-height: 100px;
   max-width: 100%;
-  margin-top: 10px;
+
 }
 
 
@@ -136,6 +140,8 @@ div.gallery-cell .cellpara {
 .cellpara button {
   max-width: 100%;
   white-space: nowrap; /* optional, prevents breaking */
+
+  margin-top: 32px;
 }
 
 div.gallery-cell button {
