--- a/src/css/output.css
+++ b/src/css/output.css
@@ -820,13 +820,16 @@ p {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+div.activities div.title {
+  margin-bottom: 40px;
+}
 div.gallery {
-  height: 630px;
+  height: 700px;
   background-color: aqua;
 }
 div.gallery-cell {
   width: 715px !important;
-  height: 630px !important;
+  height: 700px !important;
   display: flex !important;
   flex-direction: column;
   align-items: center;
@@ -837,11 +840,11 @@ div.gallery-cell .carrouseltext {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   width: 100%;
+  margin-bottom: 16px;
 }
 div.gallery-cell img {
   max-height: 100px;
   max-width: 100%;
-  margin-top: 10px;
 }
 div.gallery-cell {
   margin-right: 10px;
@@ -886,6 +889,7 @@ div.gallery-cell .cellpara {
 .cellpara button {
   max-width: 100%;
   white-space: nowrap;
+  margin-top: 32px;
 }
 div.gallery-cell button {
   width: 272px;
