--- a/src/css/output.css
+++ b/src/css/output.css
@@ -816,15 +816,30 @@ p {
   margin-right: 86px;
   margin-top: 125px;
 }
+div.team {
+  text-align: center;
+  margin-top: 158px;
+  margin-left: 86px;
+  margin-right: 86px;
+}
+div.team div.teamcontent {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr 1fr;
+}
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 div.activities div.title {
   margin-bottom: 40px;
+  margin-left: 86px;
+  margin-right: 86px;
 }
 div.gallery {
   height: 700px;
+  margin-left: 86px;
+  margin-right: 86px;
 }
 div.gallery-cell {
   width: 715px !important;
