--- a/src/css/input.css
+++ b/src/css/input.css
@@ -44,26 +44,39 @@ p {
 
     text-align: right;
     font-size: 90px;
+     margin-left: 86px;
     margin-right: 86px;
 
     margin-top: 125px;
 }
 
-div.team {
-     text-align: center;
-     margin-top: 158px;
 
-     margin-left: 86px;
-     margin-right: 86px;
+div.team {
+    margin-top: 158px;
+    margin-left: 86px;
+    margin-right: 86px;
 }
 
-div.team div.teamcontent{
+div.team div.teamheading {
+    margin-bottom: 40px;
+    text-align: center;
+}
+
+div.team div.teamcontent {
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr 1fr;
-
-    
 }
+
+.teamcontent div {
+    text-align: left;
+}
+
+.teamcontent img {
+    display: block;
+    margin: 0 auto;
+}
+
 
 
 
