--- a/src/css/output.css
+++ b/src/css/output.css
@@ -813,19 +813,30 @@ p {
   column-gap: 5px;
   text-align: right;
   font-size: 90px;
+  margin-left: 86px;
   margin-right: 86px;
   margin-top: 125px;
 }
 div.team {
-  text-align: center;
   margin-top: 158px;
   margin-left: 86px;
   margin-right: 86px;
+}
+div.team div.teamheading {
+  margin-bottom: 40px;
+  text-align: center;
 }
 div.team div.teamcontent {
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr;
+}
+.teamcontent div {
+  text-align: left;
+}
+.teamcontent img {
+  display: block;
+  margin: 0 auto;
 }
 * {
   -webkit-box-sizing: border-box;
