--- a/src/css/input.css
+++ b/src/css/input.css
@@ -62,9 +62,15 @@ div.team div.teamheading {
     text-align: center;
 }
 
+.teamcontent h2 {
+   margin-top: 16px;
+   margin-bottom: 8px;
+}
+
+
 div.team div.teamcontent {
     display: grid;
-    align-items: center;
+    align-items: start; /* alignib nad ülevalt*/
     grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -74,8 +80,9 @@ div.team div.teamcontent {
 
 .teamcontent img {
     display: block;
-    margin: 0 auto;
 }
+
+
 
 
 
@@ -137,7 +144,7 @@ div.gallery-cell {
 div.gallery-cell div.carrouseltext {
   display: grid;
   grid-template-columns: auto auto 1fr;
-  gap: 1px; /* as requested */
+  gap: 1px; 
   width: 100%;
 }
 
@@ -167,12 +174,12 @@ div.gallery-cell .cellpara {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px; /* spacing between paragraph and button */
+  gap: 10px; 
 }
 
 .cellpara button {
   max-width: 100%;
-  white-space: nowrap; /* optional, prevents breaking */
+  white-space: nowrap; 
 
   margin-top: 32px;
 }
