--- a/src/css/output.css
+++ b/src/css/output.css
@@ -924,20 +924,24 @@ div.gallery-cell button {
   height: 79px;
   border-radius: 20px;
 }
+div.meenedtitle div.title {
+  margin-bottom: 61px;
+}
 div.meened-gallery {
-  height: 700px;
-  margin-left: 86px;
-  margin-right: 86px;
+  height: 650px;
+  margin: 0 86px;
 }
 div.meened-cell {
   width: 715px !important;
-  height: 700px !important;
+  height: 650px !important;
   margin-right: 10px;
   padding: 10px;
+  background: #f8f8f8;
   display: flex !important;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  text-align: center;
 }
 div.meened-cell .meenedimg {
   width: 715px;
@@ -952,22 +956,22 @@ div.meened-cell .meenedimg img {
   object-fit: contain;
 }
 div.meened-cell .meenedpara {
-  width: 100%;
-  padding: 20px 10px;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
+  align-items: center;
+  text-align: center;
+}
+div.meened-cell .meenedpara h2 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+}
+div.meened-cell .meenedpara h1 {
+  margin-bottom: 32px;
 }
 .meenedpara button {
-  max-width: 100%;
-  margin-top: 32px;
-  white-space: nowrap;
-}
-div.meened-cell button {
   width: 272px;
   height: 79px;
+  white-space: nowrap;
   border-radius: 20px;
 }
 div.toeta {
