carrousel nr 2 done!! wooo

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -194,7 +194,8 @@ div.gallery-cell button {
 
 /*RECYCLE, REUSE | shop carrousel*/
 div.meenedtitle div.title {
-  margin-bottom: 61px
+  margin-bottom: 61px;
+  margin-left: 233px;
 }
 
 
