--- a/src/css/output.css
+++ b/src/css/output.css
@@ -926,6 +926,7 @@ div.gallery-cell button {
 }
 div.meenedtitle div.title {
   margin-bottom: 61px;
+  margin-left: 233px;
 }
 div.meened-gallery {
   height: 650px;
