--- a/src/css/input.css
+++ b/src/css/input.css
@@ -85,6 +85,29 @@ div.team div.teamcontent {
 }
 
 
+div.history {
+  margin-top: 40px;
+  background: #ffffff;
+}
+  div.history h1 {
+    margin-left: 233px;
+    margin-top: 102px;
+  }
+
+  div.history div.historybox1 {
+    display: grid;
+    align-items: start; /*alignib nad ülevalt*/
+    grid-template-columns: 1fr 1fr 1fr;
+
+    margin-left: 233px;
+    margin-right: 233px;
+    margin-top: 40px;
+    margin-bottom: 42px;
+  }
+
+   div.history div.historybox1 p {
+    margin-top: 16px;
+   }
 
 
 
@@ -388,26 +411,75 @@ div.contactform button {
     font-size: 20px;
   }
 
+  
+
+  
+/* Shop */
+div.shop {
+  margin-top: 222px;
+
+  margin-left: 233px;
+  margin-right: 233px;
+}
+
+div.shop div.shopfilter {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+}
 
 
-  /* History */
+.shopfilter h2:first-of-type {
+    margin-right: 8px; 
+}
 
-  div.history h1 {
-    margin-left: 233px;
-    margin-top: 102px;
-  }
+.shopfilter h2.font-semibold {
+    margin-right: 50px; 
+}
 
-  div.history div.historybox1 {
+.shopfilter img:first-of-type {
+    margin-right: 32px; 
+}
+
+
+div.shop div.shopcontent {
     display: grid;
-    align-items: start; /*alignib nad ülevalt*/
     grid-template-columns: 1fr 1fr 1fr;
 
-    margin-left: 233px;
-    margin-right: 233px;
-    margin-top: 40px;
-    margin-bottom: 42px;
-  }
+    margin-bottom: 296px;
 
-   div.history div.historybox1 p {
-    margin-top: 16px;
-   }
+}
+
+.shop button {
+  width: 272px;
+  height: 79px;
+  white-space: nowrap;
+  border-radius: 20px;
+}
+
+div.shop div.shopcontent h2 {
+  margin-top: 18px;
+  margin-bottom: 8px;
+}
+
+div.shop div.shopcontent h1 {
+  margin-bottom: 40px;
+}  
+
+div.shop div.shopcontent > div {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    justify-content: center;
+
+    margin-bottom: 80px;
+}
+
+div.shop div.shopcontent > div img {
+    align-self: center;
+}
+
+
+/* Sündmused */
