--- a/src/css/input.css
+++ b/src/css/input.css
@@ -483,3 +483,72 @@ div.shop div.shopcontent > div img {
 
 
 /* Sündmused */
+div.activities {
+  margin-top: 222px;
+
+  margin-left: 233px;
+  margin-right: 233px;
+
+  margin-bottom: 302px;
+}
+
+div.activities div.activities-filter{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+}
+
+
+div.activities h2:first-of-type {
+    margin-right: 8px; 
+}
+
+ div.activities-filter h2.font-semibold {
+    margin-right: 50px; 
+}
+
+ div.activities-filter img:first-of-type {
+    margin-right: 32px; 
+}
+
+.activities button {
+  width: 272px;
+  height: 79px;
+  white-space: nowrap;
+  border-radius: 20px;
+
+  margin-bottom: 80px;
+}
+
+
+.actdatentitle {
+  display: grid;
+  grid-template-columns: auto 1fr; 
+  align-items: center;
+
+  margin-bottom: 16px;
+}
+
+.title-group {
+  display: flex;
+  gap: 4px; 
+}
+
+.actdatentitle .date {
+  justify-self: end;
+}
+
+
+.activities-content {
+      display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+
+    gap: 25px;
+}
+
+.activities-content p {
+  margin-top: 16px;
+  margin-bottom: 32px;
+}
