--- a/src/css/output.css
+++ b/src/css/output.css
@@ -18,6 +18,7 @@
     --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-gray-900: oklch(21% 0.034 264.665);
+    --color-gray-950: oklch(13% 0.028 261.692);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -560,6 +561,9 @@
   }
   .text-gray-500 {
     color: var(--color-gray-500);
+  }
+  .text-gray-950 {
+    color: var(--color-gray-950);
   }
   .text-slate-800 {
     color: var(--color-slate-800);
@@ -1137,6 +1141,57 @@ div.shop div.shopcontent > div {
 }
 div.shop div.shopcontent > div img {
   align-self: center;
+}
+div.activities {
+  margin-top: 222px;
+  margin-left: 233px;
+  margin-right: 233px;
+  margin-bottom: 302px;
+}
+div.activities div.activities-filter {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 40px;
+}
+div.activities h2:first-of-type {
+  margin-right: 8px;
+}
+div.activities-filter h2.font-semibold {
+  margin-right: 50px;
+}
+div.activities-filter img:first-of-type {
+  margin-right: 32px;
+}
+.activities button {
+  width: 272px;
+  height: 79px;
+  white-space: nowrap;
+  border-radius: 20px;
+  margin-bottom: 80px;
+}
+.actdatentitle {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.title-group {
+  display: flex;
+  gap: 4px;
+}
+.actdatentitle .date {
+  justify-self: end;
+}
+.activities-content {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 1fr;
+  gap: 25px;
+}
+.activities-content p {
+  margin-top: 16px;
+  margin-bottom: 32px;
 }
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=light]:checked),[data-theme=light] {
