--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1218,18 +1218,10 @@ div.activities-filter img:first-of-type {
 }
 .footer {
   color: white;
+  padding-top: 58px;
 }
 .footer h2, .footer p {
   color: white;
-}
-div.footer {
-  display: grid;
-  display: grid;
-  align-items: center;
-  grid-template-columns: 1fr 2fr 1fr;
-  background-color: #2A2720;
-  padding-left: 233px;
-  padding-right: 233px;
 }
 .fnavbar {
   display: flex;
@@ -1242,12 +1234,29 @@ div.footer {
   justify-content: center;
   width: 100%;
   gap: 61px;
+  margin-top: 34px;
+  margin-bottom: 110px;
 }
 div.footer div.footerbox3 {
   text-align: right;
 }
 .fnumber {
   width: 100%;
+  margin-top: 22px;
+}
+div.footer {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  align-items: start;
+  background-color: #2A2720;
+  padding-left: 233px;
+  padding-right: 233px;
+}
+div.footer div.fnavbar {
+  font-size: 24px;
+}
+div.footer div.copyright {
+  margin-bottom: 64px;
 }
 @layer base {
   :where(:root),:root:has(input.theme-controller[value=light]:checked),[data-theme=light] {
