hid green border

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -16,9 +16,9 @@ body {
 }
 
 
-div {
-     border:1px solid green; /* deleting later */
-}
+/*div {
+     border:1px solid green; 
+}*/
 
 h1 {
     font-size: 45px;
