--- a/src/css/output.css
+++ b/src/css/output.css
@@ -849,7 +849,6 @@ div.team {
 }
 div.team div.teamheading {
   margin-bottom: 40px;
-  text-align: center;
 }
 .teamcontent h2 {
   margin-top: 16px;
@@ -892,7 +891,6 @@ div.history div.historybox1 p {
 }
 div.activities div.title {
   margin-bottom: 40px;
-  margin-left: 233px;
   margin-right: 86px;
 }
 div.gallery {
@@ -1137,6 +1135,7 @@ div.shop div.shopcontent {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 296px;
+  gap: 24px;
 }
 .shop button {
   width: 272px;
@@ -1213,19 +1212,19 @@ div.activities-filter img:first-of-type {
   margin-top: 16px;
   margin-bottom: 32px;
 }
-.footer {
+div.footer {
   color: white;
   padding-top: 58px;
 }
-.footer h2, .footer p {
+div.footer h2, div.footer p {
   color: white;
 }
-.fnavbar {
+div.footer div.fnavbar {
   display: flex;
   flex-wrap: wrap;
   gap: 68px;
 }
-.fsocials {
+div.footer div.fsocials {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -1237,7 +1236,7 @@ div.activities-filter img:first-of-type {
 div.footer div.footerbox3 {
   text-align: right;
 }
-.fnumber {
+div.footer div.fnumber {
   width: 100%;
   margin-top: 22px;
 }
